--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,30 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springlearning</groupId>
-    <artifactId>gues-the-number-game</artifactId>
+    <artifactId>guess-the-number-game</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>core</module>
+    </modules>
+
+    <properties>
+        <java.version>11</java.version>
+        <compiler.version>3.8.1</compiler.version>
+        <logback.version>1.2.3</logback.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
 
 
     <!-- builds : add this to run the project -->
@@ -15,11 +37,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${compiler.version}</version>
                 <configuration>
-                    <target>11</target>
-                    <source>11</source>
-                    <release>11</release>
+                    <target>${java.version}</target>
+                    <source>${java.version}</source>
+                    <release>${java.version}</release>
                 </configuration>
             </plugin>
         </plugins>
