--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <java.version>11</java.version>
         <compiler.version>3.8.1</compiler.version>
         <logback.version>1.2.3</logback.version>
+        <springcontext.version>5.2.5.RELEASE</springcontext.version>
     </properties>
 
     <dependencyManagement>
@@ -25,6 +26,12 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${springcontext.version}</version>
             </dependency>
 
         </dependencies>
